tests/NormalTests/paczka1/small_fuzzy/67879292.err
Error in line 3: A486 S620 17,7
Error in line 4: WN0o S620 45,3
Error in line 5: A486 S188 4,3
Error in line 8: WN0o S188 51,0
Error in line 6: wYxpHB7 S188 12,3
Error in line 14: wYxpHB7 A469 69,0
